feat(cp3): register single pdf sources
